# sync-contracts-shared-package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
py_sync_contracts/: __init__.py  channels.py  enums.py  execution_outcome.py  payload.py  publisher.py  strategy_requirements.py  validators.py
tests/: test_enums.py  test_execution_outcome.py  test_payload.py  test_publisher.py  test_strategy_requirements.py  test_v0_5_compat.py  test_validators.py
